# ring_puzzle

./: .gitignore  .ruff.toml  LICENSE  README.md  biome.json  codestyle.sh  package.json  pyproject.toml  web_build.sh
.github/workflows/: static.yml  tox.yml
docs/: index-3gtefs6t.css  index-3jr2btgs.js  index-fpfbxbz6.js  index-h67dxvh9.js  index-p4n8kemb.js  index-y5dvshg9.css  index.html
plan/: endgame.md
src/ring_puzzle/: __init__.py  endgame.json  endgame.py  endgame_macro_report.json  shifts.py  solver.py  util.py
tests/: test_endgame_report.py  test_endgame_table.py  test_integration_end_to_end.py  test_solver.py
web/: app.ts  endgame.json  index.html  puzzle.ts  shifts.ts  solver.ts  styles.css  types.ts  ui.ts
