[project]
name = "ring-puzzle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "yinchichan@pm.me" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ring = "ring_puzzle:main"
endgame = "ring_puzzle.endgame:main"
endgame-macros = "ring_puzzle.endgame:main_macro_report"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
